--- a/views/sites/signup.ejs
+++ b/views/sites/signup.ejs
@@ -7,7 +7,7 @@
 <h1>signup</h1>
 <form method="POST" action="/users">
 	<input type="text" name="user[email]">
-	<input type="password" name="user[password_digest]">
+	<input type="password" name="user[password]">
 	<button>Submit</button>
 </form>
 
