css and working map but cluster issues

--- a/views/sites/map.ejs
+++ b/views/sites/map.ejs
@@ -53,7 +53,7 @@
 		};
 
 
-
+		// I'm adding this comment so I can commit changes to github :) 
 		window.addEventListener("load", onload)
 	</script>
 </body>
