--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,8 +1,8 @@
 body {
 	padding-top: 75px;
 	font-family: 'Raleway', sans-serif;
-	background-color: #34495D;
-	color: #EAE3E3;
+	background-color: #34495C;
+	color: #white;
 }
 button {
 	color:black;
@@ -13,4 +13,11 @@ div.jumbotron h1 {
 nav.navbar-default {
 	background-color: #34495E;
 	border: solid 1px AEC8D9;
+	color:white;
+}
+#main-logo {
+	color:white;
+}
+h1 {
+	color:white;
 }
