--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -11,17 +11,18 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/custom.css">
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<style>
-		#map {width:100%; height: 500px; margin:5%;}
+		#map {width:100%; height: 500px;}
 	</style>
 </head>
 <body>
 	 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <a class="navbar-brand" href="#">Flat Park SF</a>
+        <a class="navbar-brand" id="main-logo" href="/">Flat Park SF</a>
         <nav>
           <ul class="nav nav-pills pull-right">
             <li><a href="/login">Log In</a></li>
             <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/logout">Log Out</a></li>
           </ul>
         </nav>
       </div>
