updated content of frontpage

--- a/views/sites/home.ejs
+++ b/views/sites/home.ejs
@@ -1,7 +1,7 @@
 <% include ../layouts/header.ejs %>
 	<div class="jumbotron">
-		<h1>FLAT PARK SF</h1>
-		<h3>When Flat Routes Make a Difference</h3>
+		<h1>FREE PARK SF</h1>
+		<h3>Where and when you can park on the street</h3>
 	</div>
 	<div class="row">
 		<div class="col-xs-offset-5 col-xs-2">
