--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SF FREE PARK</title>
+	<title>SF FLAT PARK</title>
 	<meta charset=utf-8 />
 	<title>Leaflet Markercluster</title>
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
@@ -17,7 +17,7 @@
 <body>
 	 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <a class="navbar-brand" id="main-logo" href="/">Free Park SF</a>
+        <a class="navbar-brand" id="main-logo" href="/">Flat Park SF</a>
         <nav>
           <ul class="nav nav-pills pull-right">
             <li><a href="/login">Log In</a></li>
